# site

./: Procfile  README.md  pelicanconf.py  publishconf.py  pyproject.toml  tailwind.config.js
content/: go-inspire-gpt.md  refreshed-site.md  venerable-software.md
themes/simple/static/css/: base.css
themes/simple/templates/: article.html  base.html  index.html
