[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Personal Blog"
authors = ["Anson MacKeracher <anson@mackeracher.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.8.0"}
honcho = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
